5.8.4openmpi
	- fixed handling NULL value of pathname given to certain I/O calls
	  (e.g. fopen, open, unlink)

5.8.3openmpi
	- fixed compile error on Red Hat 5.x which occurred if using GNU
	  compiler with -D_FORTIFY_SOURCE=2

5.8.2openmpi
	- fixed buffer overflow which occurred if marker or event comment
	  records generated
	- fixed bug in MPI-I/O tracing: tracking MPI file handles even if
	  MPI_File_open isn't recorded
	- enforced creating of event/summary files even process/thread doesn't
	  produce trace data
	- if configuring inside Open MPI, install header files into
	  <includedir>/vampirtrace even the configure option '--includedir' is
	  specified

5.8.1openmpi
	- updated version of internal OTF to 1.6.5openmpi
	  (see extlib/otf/ChangeLog)
	- added support for tracing functions in shared libraries instrumented
	  by the GNU, Intel, PathScale, or PGI 9 compiler
	- extended support for BlueGene/P in terms of tracing libraries
	  (e.g. libc I/O) and tracing of multi-threaded applications
	- added default option file for CrayXT platforms
	- added support for PAPI-C counters which belong to different components
	- added environment variable VT_METRICS_SEP to specify a string which
	  separate the counter names in VT_METRICS
	- extended usability of environment variable VT_METRICS for PAPI
	  counters to specifiy whether a counter provides increasing or
	  absolute values
	- added support for "re-locate" an existing VampirTrace installation
	  without re-build it from source
	- fixed configure's version detection for PAPI to support version 4.x
	- added configure tests for a few pthread functions which do not exist
	  on some platforms
	- added configure tests to detect Bull MPICH2
	- use Open MPI provided Fortran wrapper library 'libmpi_f77'
	- added functions 'MPI_Group_range_<incl|excl>' to Fortran MPI wrappers
	- use more portable 'nm' command instead of the BFD library to collect
	  symbol information for instrumentation with the GNU, Intel, PathScale,